Fixing off-center bio.

--- a/css/styles.css
+++ b/css/styles.css
@@ -578,7 +578,7 @@ a:hover {
 @media screen and (max-width: 700px)
 {
 	.bio {
-	  max-width: 300px;
+	  max-width: 320px;
 	  text-align: center;
 	}
 	.bio img {
